Moving webkit stack transitions over; ipad animation flicker fixes.

--- a/css/jo.css
+++ b/css/jo.css
@@ -185,6 +185,44 @@ jostack {
   -moz-perspective: 400px;
   -o-perspective: 400px;
 }
+jostack {
+  -webkit-transition: opacity 0.3s ease-out;
+  -moz-transition: opacity 0.3s ease-out;
+  -o-transition: opacity 0.3s ease-out;
+}
+jostack > * {
+  -webkit-transform-origin: 50% 100% 0;
+  -webkit-transform: rotatez(0) translatez(0);
+  -webkit-transition: -webkit-transform 0.3s ease-out, z-index 0.3s ease-out, height 0s ease, overflow 0s ease;
+  -moz-transform-origin: 50% 100% 0;
+  -moz-transform: rotatez(0) translatez(0);
+  -moz-transition: -moz-transform 0.3s ease-out, z-index 0.3s ease-out, height 0s ease, overflow 0s ease;
+  -o-transform-origin: 50% 100% 0;
+  -o-transform: rotatez(0);
+  -o-transition: -o-transform 0.3s ease-out;
+}
+jostack > .next {
+  z-index: -1;
+  -webkit-transform: rotatez(45deg) translatey(-10%) translatex(100%);
+  -moz-transform: rotatez(45deg);
+  -o-transform: rotatez(45deg);
+  height: 100%;
+  overflow: hidden;
+}
+jostack > .prev {
+  z-index: 1;
+  -webkit-transform: rotatez(-45deg) translatey(10%) translatex(-100%);
+  -moz-transform: rotatez(-45deg);
+  -o-transform: rotatez(-45deg);
+  height: 100%;
+  overflow: hidden;
+}
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+jobutton {
+  background-repeat: repeat-x;
+}
 jocard {
   width: 100%;
   min-height: 100%;
@@ -221,10 +259,11 @@ joscroller {
   margin: 0;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translatey(0);
-  -o-transform: translatey(0);
+  -o-transform: translate(0, 0);
 }
 joscroller > * {
   position: absolute;
+  top: 0;
   -webkit-animation-fill-mode: forwards;
   -webkit-transition: -webkit-transform 0s ease;
   -moz-animation-fill-mode: forwards;
@@ -355,6 +394,9 @@ jopopup {
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
   -o-box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
   background-color: #34c;
   color: #fff;
   background-image: url(aluminum/shiny.png);
@@ -364,13 +406,8 @@ jopopup {
   -webkit-transition: -webkit-transform 0.4s ease-in, opacity 0.4s ease-in;
   -moz-transition: -moz-transform 0.4s ease-in, opacity 0.4s ease-in;
   -o-transition: -o-transform 0.4s ease-in, opacity 0.4s ease-in;
-  /* ios */
-
-  -webkit-border-radius: 20px;
   -webkit-transform: scale(0.5);
-  -moz-border-radius: 20px;
   -moz-transform: scale(0.5);
-  -o-border-radius: 20px;
   -o-transform: scale(0.5);
   max-width: 280px;
   margin: 0 auto;
@@ -395,6 +432,7 @@ jopopup > jolist > *:last-child.selectjopopup > jomenu > *:first-child.select {
 jopopup.show {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
+  -o-transform: scale(1);
   opacity: 1;
 }
 jopopup > joscroller {
@@ -436,17 +474,12 @@ jonavbar > joflexrow {
   bottom: 0;
 }
 jobackbutton {
-  background-image: url(subtle-shiny.png);
-  background-repeat: repeat-x;
-  background-position: top left;
-  background-size: 100% 50%;
-  -webkit-background-size: 100% 50%;
-  -moz-background-size: 100% 50%;
-  /*	background-color: #333; */
+  /*	.imagebg(url(subtle-shiny.png), 50%); */
 
+  background: transparent url(back-mini.png) 10px center no-repeat;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-bottom-color: rgba(255, 255, 255, 0.3);
-  padding: 5px 10px;
+  padding: 5px 10px 5px 20px;
   margin: 5px 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -458,7 +491,7 @@ jobackbutton {
   color: #ddd;
 }
 jobackbutton.focus, jobackbutton.selected {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 jobackbutton.active {
   display: block;
@@ -843,9 +876,9 @@ joexpando.open > *:first-child {
   -moz-border-radius: 10px 10px 0 0;
   border-radius: 10px 10px 0 0;
 }
-jolabel {
+jolabel, label {
   margin-bottom: 5px;
-  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.6);
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
 }
 jocaption {
   margin: 10px;
@@ -897,4 +930,7 @@ jotoggle > *:last-child {
 }
 html {
   -webkit-text-size-adjust: none;
+}
+body {
+  -webkit-backface-visibility: hidden;
 }
